Corrigidos os estilos para melhorar o contraste dos botões, início da correção ds funções para o cálculo correcto com base nas faltas

--- a/Salários/css/styles.css
+++ b/Salários/css/styles.css
@@ -138,6 +138,7 @@ button {
   flex: 1;
   border-radius: 15px;
   transition: opacity 0.3s ease;
+  font-weight: bold;
 }
 
 button:hover {
